<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/code_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/code_sent_to"
        app:layout_constraintBottom_toTopOf="@id/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:height="40dp"
        app:layout_constraintBottom_toTopOf="@id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:length="5"
        app:otp="12345"
        app:otp_text_size="24dp"
        app:width="40dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/warning"
        app:layout_constraintStart_toStartOf="@id/otp"
        app:layout_constraintEnd_toEndOf="@id/otp"
        app:layout_constraintTop_toBottomOf="@id/otp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_error"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/invalid_otp_code"
        android:textColor="@color/red"
        android:drawablePadding="8dp"
        android:paddingHorizontal="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/verify"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>